<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="7dp"
    app:cardCornerRadius="10dp"
    android:id="@+id/vidParent"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="198dp"
            android:layout_height="200dp"
            android:contentDescription="@string/video_thumbnail"
            android:id="@+id/vidThumbnail"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/txtTitle"
            android:layout_below="@id/vidThumbnail"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/txtDesc"
            android:layout_below="@id/txtTitle"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDesc"
            android:text="@string/delete"
            android:textColor="@color/error"
            android:id="@+id/txtDelete"
            android:textSize="18sp"
            android:layout_alignStart="@id/txtDesc"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_placeholder"
            android:layout_below="@id/vidThumbnail"
            android:id="@+id/expandIcon"
            android:contentDescription="@string/expand_icon"
            android:clickable="true"
            android:focusable="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_collapse"
            android:layout_below="@id/txtDesc"
            android:id="@+id/collapseIcon"
            android:contentDescription="@string/collapse_icon"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>