<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="350dp"
            android:layout_height="450dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCard"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/full_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtEditName"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCard"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="Full Name"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/txtEditEmail"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtEditName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtEmail"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number" />
                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/edtEditPhone"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtEditEmail"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="Phone Number"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:visibility="gone"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/edtEditPassword"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtEditPhone"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="Password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:visibility="gone"
                    android:textAlignment="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtPhone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/edit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCommit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtEditPassword"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/save"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btnCommit"
                    android:layout_below="@id/edtEditPassword"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/cancel"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/logout" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/imgCard"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:cardBackgroundColor="@color/teal_700"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/profilePic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/profile_picture"
                        android:src="@drawable/ic_action_placeholder"/>
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>